--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/transformer-posthtml": "^2.7.0",
+    "@parcel/transformer-sass": "^2.7.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "eslint-plugin-react-hooks": "^4.6.0",
