--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "turnitin",
+  "name": "dognavigator",
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel serve src/index.html --open"
   },
   "keywords": [],
